WIP Finagle menu position to avoid overflow

--- a/test/screenshot/spec/mdc-menu/issues/fixture.scss
+++ b/test/screenshot/spec/mdc-menu/issues/fixture.scss
@@ -22,5 +22,5 @@
 
 .test-menu--4025 {
   top: 50%;
-  left: 50%;
+  left: 45%;
 }
